--- a/cases-item.html
+++ b/cases-item.html
@@ -75,24 +75,20 @@
             </div>
         </section>
 
-        <section class="section py-5">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="row g-4 g-lg-0">
-                    <div class="col-lg-4 order-lg-2">
-                        <div class="dark-mode bg-color-black color-white h-100 px-2 px-lg-4 pt-lg-4">
-                            <h1 class="fw-bold mb-5">Интернет-магазин для продажи дров</h1>
+                <div class="row g-4">
+                    <div class="col-lg-4">
+                        <div class="sticky-top pt-lg-5">
+                            <h1 class="h2 fw-bold mb-5">Интернет-магазин для продажи дров</h1>
+                            <p class="color-blue">Задачи</p>
                             <p>Имеет поддержку для настольных компьютеров, планшетов и мобильных устройств.</p>
-                            <p><span class="color-blue">Файлы</span>: PHP файлы, CSS файлы, JS файлы,архив для установки сайта, инструкция по установке.</p>
-                            <p><span class="color-blue">Дизайн</span>: Адаптивный.</p>
                             <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
+                            <p class="color-blue">Цели</p>
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
-                            <div class="d-none">
-                                <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
-                                <a class="btn btn-secondary" href="#">Демо</a>
-                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-8 order-lg-1">
+                    <div class="col-lg-8">
                         <img class="w-100" src="img/case-about.png" alt="">
                     </div>
                 </div>
