--- a/cases.html
+++ b/cases.html
@@ -74,60 +74,60 @@
             </div>
         </section>
 
-        <section class="section py-5">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <h1 class="text-uppercase fw-bold mb-5">Реализованные проекты</h1>
                 <div class="row g-4 justify-content-between">
                     <div class="col-md-6 col-lg-5">
-                        <div class="card card-case">
+                        <div class="card card-case py-4">
                             <img class="card-img" src="img/case-01.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="card card-case">
+                        <div class="card card-case py-4">
                             <img class="card-img" src="img/case-02.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="card card-case">
+                        <div class="card card-case py-4">
                             <img class="card-img" src="img/case-03.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-5">
-                        <div class="card card-case">
+                        <div class="card card-case py-4">
                             <img class="card-img" src="img/case-04.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-5">
-                        <div class="card card-case">
+                        <div class="card card-case py-4">
                             <img class="card-img" src="img/case-05.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6">
-                        <div class="card card-case">
+                        <div class="card card-case py-4">
                             <img class="card-img" src="img/case-06.png" alt="">
                             <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="cases-item.html">Дрова-шоп</a></p>
+                                <p class="card-title fz-15 fw-bold"><a class="stretched-link text-decoration-none" href="cases-item.html">Дрова-шоп</a></p>
                                 <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
                             </div>
                         </div>
