alert z-index-fix

--- a/cases-item.html
+++ b/cases-item.html
@@ -80,12 +80,15 @@
                 <div class="row g-4">
                     <div class="col-lg-4">
                         <div class="sticky-top pt-lg-5">
+                            <p class="fz-15 fw-light mb-0">Клиент</p>
                             <h1 class="h2 fw-bold mb-5">Интернет-магазин для продажи дров</h1>
-                            <p class="color-blue">Задачи</p>
-                            <p>Имеет поддержку для настольных компьютеров, планшетов и мобильных устройств.</p>
-                            <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
-                            <p class="color-blue">Цели</p>
-                            <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
+                            <p class="fz-15">Что было сделано:</p>
+                            <div class="fw-light">
+                                <p>- был выбран шаблон <a href="#">№3445667</a> и заполнен по желанию заказчика в соответствии с  тематикой</p>
+                                <p>- реализована заявочная система товаров. которая на этапе приёма заявки позволяет продавцу узнать какой конкретно товар хочет получить клиент и это без дополнительных действий от клиента. только номер телефона и имя</p>
+                                <p>- проведена техническая подготовка шаблона под дальнейшее SEO продвижение</p>
+                                <p>- оптимизировали работу сайта и сократили время  загрузки в половину, что в свою очередь улучшило пользовательский опыт клиентов и избежали уход клиента до загрузки страницы</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-8">
@@ -224,7 +227,7 @@
     </div>
 
     <!-- Cookie alert box -->
-    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100"
+    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
                 class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
