--- a/shop-item.html
+++ b/shop-item.html
@@ -75,24 +75,28 @@
             </div>
         </section>
 
-        <section class="section py-5">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="row g-4 g-lg-0">
-                    <div class="col-lg-4 order-lg-2">
-                        <div class="dark-mode bg-color-black color-white h-100 px-2 px-lg-4 pt-lg-4">
+                <div class="row g-4">
+                    <div class="col-lg-4">
+                        <div class="sticky-top pt-lg-5">
                             <h1 class="fw-bold mb-5">Дрова-шоп</h1>
+                            <div class="d-flex justify-content-between py-3">
+                                <p class="fz-15">№123456</p>
+                                <p class="fz-15">6900 руб.</p>
+                            </div>
                             <p><span class="color-blue">Обновлён</span>: Январь 2023</p>
                             <p><span class="color-blue">Опубликован</span>: Январь 2023</p>
                             <p><span class="color-blue">Технологии</span>: React JS, HTML5, SASS, LESS, SCSS, Bootstrap 5</p>
                             <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
-                            <div class="d-none">
+                            <div class="mt-5">
                                 <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
                                 <a class="btn btn-secondary" href="#">Демо</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8 order-lg-1">
+                    <div class="col-lg-8">
                         <img class="w-100" src="img/case-about.png" alt="">
                     </div>
                 </div>
@@ -228,7 +232,7 @@
     </div>
 
     <!-- Cookie alert box -->
-    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100"
+    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
                 class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
