--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,10 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Создание сайтов</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
-                            <li class="nav-item dropdown">
+                            <!-- <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     aria-current="page">Услуги</a>
                                 <ul class="dropdown-menu">
@@ -48,7 +49,7 @@
                                     <li><a class="dropdown-item" href="#">Пункт 2</a></li>
                                     <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
                             <li class="nav-item"><a class="nav-link active" href="contact.html">Контакты</a></li>
                         </ul>
@@ -74,37 +75,24 @@
             </div>
         </section>
 
-        <section class="section py-5">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <h1 class="text-uppercase fw-bold mb-5">Политика обработки персональных данных</h1>
-                    <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
-                        персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
-                        Под
-                        персональными данными понимается любая информация, относящаяся к прямо или косвенно
-                        определённому или определяемому физическому лицу (гражданину).</p>
-                    <p>2. Пользователь также даёт своё согласие Администрации на отправку маркетинговых и информационных
-                        рассылок.</p>
-                    <p>3. Основанием для обработки персональных данных являются: статья 24 Конституции РФ и статья 6
-                        Федерального закона № 152-ФЗ «О персональных данных» с дополнениями и изменениями.</p>
-                    <p>4. В ходе обработки с персональными данными будут совершены следующие операции: сбор, хранение,
-                        уточнение, передача, блокирование, удаление, уничтожение — все упомянутые действия только в
-                        целях, указанных в п. 2 настоящего Соглашения.</p>
-                    <p>5. Администрация обязуется не передавать полученную от Пользователя информацию третьим лицам. Не
-                        считается нарушением предоставление персональных данных третьим лицам, действующим на основании
-                        договора с Сайтом, для исполнения обязательств перед Пользователем и только в рамках настоящего
-                        Соглашения.</p>
-                    <p>6. Персональные данные хранятся и обрабатываются до завершения всех необходимых процедур либо до
-                        ликвидации Сайта.</p>
-                    <p>7. Согласие может быть отозвано Пользователем или его представителем путём направления
-                        письменного заявления на Сайт по электронному адресу support@startsite.studio</p>
-                    <p>8. Пользователь принимает политику использования файлов cookies, используемую на Сайте, и даёт
-                        согласие на получение информации об IP-адресе и иных сведений о его активности на Сайте. Данная
-                        информация не используется для установления личности Пользователя.</p>
-                    <p>9. Администрация при обработке персональных данных принимает необходимые и достаточные
-                        организационные и технические меры для защиты персональных данных от неправомерного доступа к
-                        ним, а также от иных неправомерных действий в отношении персональных данных.</p>
+                <div class="row g-4">
+                    <div class="col-lg-6">
+                        <img src="img/map.png" alt="">
+                    </div>
+                    <div class="col-lg-6">
+                        <h1>Позвоните нам или напишите</h1>
+                        <p><a href="#">+7 (495) 159-59-01</a></p>
+                        <p><a href="#">support@startsite.studio</a></p>
+                        <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
+                        <p>К нам можно приехать и все обсудить, если у вас более крупный проект
+                            Понедельник — Пятница
+                            с 09:00 — 18:00</p>
+                        <p>Наш адрес: 117638 Россия, Москва, Одесская улица, 2кС</p>
+                        <p>Отдел поддержки: круглосуточно</p>
+                    </div>
+                </div>
             </div>
         </section>
 
