--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link active" href="index.html">Создание сайтов</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
-                            <li class="nav-item dropdown">
+                            <!-- <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     aria-current="page">Услуги</a>
                                 <ul class="dropdown-menu">
@@ -48,7 +49,7 @@
                                     <li><a class="dropdown-item" href="#">Пункт 2</a></li>
                                     <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
