--- a/shop.html
+++ b/shop.html
@@ -38,9 +38,10 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Создание сайтов</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
-                            <li class="nav-item dropdown">
+                            <!-- <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     aria-current="page">Услуги</a>
                                 <ul class="dropdown-menu">
@@ -48,7 +49,7 @@
                                     <li><a class="dropdown-item" href="#">Пункт 2</a></li>
                                     <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <li class="nav-item"><a class="nav-link active" href="shop.html">Шаблоны</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
@@ -74,24 +75,33 @@
             </div>
         </section>
 
-        <section class="section py-5">
+        <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
+                <p class="fz-15 fw-light mb-0">Для своего бизнеса</p>
+                <h1 class="text-uppercase fw-bold mb-5">Выбери готовый сайт</h1>
                 <div class="row g-4">
-                    <div class="col-lg-6">
-                        <div class="card card-case">
-                            <img class="card-img" src="img/case-01.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="shop-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
-                            </div>
-                        </div>
+                    <div class="col-lg-4">
+                        123
                     </div>
-                    <div class="col-lg-6">
-                        <div class="card card-case">
-                            <img class="card-img" src="img/case-02.png" alt="">
-                            <div class="card-body">
-                                <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="shop-item.html">Дрова-шоп</a></p>
-                                <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                    <div class="col-lg-8">
+                        <div class="row g-4">
+                            <div class="col-md-6">
+                                <div class="card card-case">
+                                    <img class="card-img" src="img/case-01.png" alt="">
+                                    <div class="card-body">
+                                        <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="shop-item.html">Дрова-шоп</a></p>
+                                        <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card card-case">
+                                    <img class="card-img" src="img/case-02.png" alt="">
+                                    <div class="card-body">
+                                        <p class="card-title fz-15 fw-bold"><a class="stretched-link" href="shop-item.html">Дрова-шоп</a></p>
+                                        <p class="card-text">The best credit cards offer some tantalizing combinations of promotions and prizes</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
