--- a/policy.html
+++ b/policy.html
@@ -126,9 +126,9 @@
                 <div class="col-lg-9 text-center text-lg-end">
                     <div class="d-none d-lg-block">
                         <ul class="nav justify-content-end">
+                            <li class="nav-item"><a href="index.html" class="nav-link px-2">Создание сайтов</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
                             <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2">Услуги</a></li>
                             <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
                             <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
                         </ul>
