--- a/contact.html
+++ b/contact.html
@@ -79,18 +79,24 @@
             <div class="container">
                 <div class="row g-4">
                     <div class="col-lg-6">
-                        <img src="img/map.png" alt="">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9001.702675027072!2d37.5988669!3d55.6641977!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x21af53fd031941f!2z0JHQuNC30L3QtdGBINGG0LXQvdGC0YAg0JvQvtGC0L7RgQ!5e0!3m2!1sru!2sru!4v1673627503776!5m2!1sru!2sru" width="100%" height="750" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-lg-6">
-                        <h1>Позвоните нам или напишите</h1>
-                        <p><a href="#">+7 (495) 159-59-01</a></p>
-                        <p><a href="#">support@startsite.studio</a></p>
-                        <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
-                        <p>К нам можно приехать и все обсудить, если у вас более крупный проект
-                            Понедельник — Пятница
-                            с 09:00 — 18:00</p>
-                        <p>Наш адрес: 117638 Россия, Москва, Одесская улица, 2кС</p>
-                        <p>Отдел поддержки: круглосуточно</p>
+                        <div class="p-lg-3 pt-lg-0">
+                            <h1 class="fw-bold mb-4">Позвоните нам<br> или напишите</h1>
+                            <p><a href="#">+7 (495) 159-59-01</a></p>
+                            <p><a href="#">support@startsite.studio</a></p>
+                            <div class="py-5">
+                                <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
+                            </div>
+                            <div class="fz-15">
+                                <p>К нам можно приехать и все обсудить,<br> если у вас более крупный проект</p>
+                                <p>Понедельник — Пятница</p>
+                                <p class="color-blue">с 09:00 — 18:00</p>
+                            </div>
+                            <p class="fw-bold">Наш адрес: 117638 Россия, Москва, Одесская улица, 2кС</p>
+                            <p>Отдел поддержки: <span class="color-blue">круглосуточно</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
