--- a/shop-item.html
+++ b/shop-item.html
@@ -39,7 +39,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link" href="index.html">Создание сайтов</a></li>
-                            <li class="nav-item"><a class="nav-link active" href="about.html">Веб-студия</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                             <!-- <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
@@ -50,7 +50,7 @@
                                     <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                 </ul>
                             </li> -->
-                            <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="shop.html">Шаблоны</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
