--- a/about.html
+++ b/about.html
@@ -75,9 +75,34 @@
             </div>
         </section>
 
+        <section class="section frontpage-hero">
+            <div class="container-fluid p-0">
+                <div class="row g-0">
+                    <div class="col-lg-10">
+                        <p class="fz-15 fw-light mb-0">Профессиональный</p>
+                        <h1 class="text-uppercase fw-bold mb-5">Веб-разработчик и надежный бизнес-партнер</h1>
+                        <img class="w-100" src="img/about-01.png" alt="">
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="d-flex flex-column justify-content-center align-items-center h-100 pt-4 pt-lg-0">
+                            <p>236</p>
+                            <p>Разработано проектов</p>
+                            <p>9346</p>
+                            <p>Рабочих часов затрачено</p>
+                            <div class="bg-btn-hero bg-color-black"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section py-5">
             <div class="container">
-                <h1 class="text-uppercase fw-bold mb-5">Веб-студия</h1>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2>Наша команда</h2>
+                    </div>
+                </div>
             </div>
         </section>
 
